@@ -346,7 +346,7 @@ the previous 8K characters (or all the previous characters, if fewer than 8K)
 are guaranteed to be available for lookbehind assertions. This option does not
 work when input is read line by line (see \fP--line-buffered\fP.)
 .TP
-\fB-N\fP \fInewline-type\fP, \fB--newline=\fP\fInewline-type\fP
+\fB-N\fP \fInewline-type\fP, \fB--newline\fP=\fInewline-type\fP
 The PCRE library supports five different conventions for indicating
 the ends of lines. They are the single-character sequences CR (carriage return)
 and LF (linefeed), the two-character sequence CRLF, an "anycrlf" convention,
@@ -372,13 +372,25 @@ output, it precedes the line number. This option is forced if
 \fB--line-offsets\fP is used.
 .TP
 \fB-o\fP, \fB--only-matching\fP
-Show only the part of the line that matched a pattern. In this mode, no
-context is shown. That is, the \fB-A\fP, \fB-B\fP, and \fB-C\fP options are
-ignored. If there is more than one match in a line, each of them is shown
-separately. If \fB-o\fP is combined with \fB-v\fP (invert the sense of the
-match to find non-matching lines), no output is generated, but the return code
-is set appropriately. This option is mutually exclusive with
-\fB--file-offsets\fP and \fB--line-offsets\fP.
+Show only the part of the line that matched a pattern instead of the whole
+line. In this mode, no context is shown. That is, the \fB-A\fP, \fB-B\fP, and
+\fB-C\fP options are ignored. If there is more than one match in a line, each
+of them is shown separately. If \fB-o\fP is combined with \fB-v\fP (invert the
+sense of the match to find non-matching lines), no output is generated, but the
+return code is set appropriately. If the matched portion of the line is empty,
+nothing is output unless the file name or line number are being printed, in
+which case they are shown on an otherwise empty line. This option is mutually
+exclusive with \fB--file-offsets\fP and \fB--line-offsets\fP.
+.TP
+\fB-o\fP\fInumber\fP, \fB--only-matching\fP=\fInumber\fP
+Show only the part of the line that matched the capturing parentheses of the 
+given number. Up to 32 capturing parentheses are supported. Because these
+options can be given without an argument (see above), if an argument is
+present, it must be given in the same shell item, for example, -o3 or
+--only-matching=2. The comments given for the non-argument case above also 
+apply to this case. If the specified capturing parentheses do not exist in the 
+pattern, or were not set in the match, nothing is output unless the file name 
+or line number are being printed.
 .TP
 \fB-q\fP, \fB--quiet\fP
 Work quietly, that is, display nothing except error messages. The exit
@@ -525,6 +537,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 30 October 2010
+Last updated: 31 October 2010
 Copyright (c) 1997-2010 University of Cambridge.
 .fi
